--- a/products.html
+++ b/products.html
@@ -52,60 +52,40 @@
     <!-- 文创产品板块 -->
     <section class="section">
         <div class="container">
-            <div class="products-grid">
+            <h2 class="section-title">文创产品</h2>
+            <!-- 产品列表：明信片 + 皮影贴纸 -->
+            <div class="product-grid">
+                <!-- 产品1：海宁皮影主题明信片 -->
                 <div class="product-card">
-                    <div class="product-image">
-                        <i class="fas fa-mask"></i>
+                    <h3 class="product-title">海宁皮影主题明信片</h3>
+                    <p class="product-desc">
+                        海宁皮影碰撞异域文化，小小一张明信片藏着交融的趣意。  
+                        以皮影造型为魂，融合江南水韵、市井烟火、草原风光，重构非遗表达边界。
+                    </p>
+                    <!-- 新增价格模块 -->
+                    <p class="product-price">售价：<span>20元</span></p>
+                    <div class="product-image-grid">
+                        <img src="images/postcards/postcard-1.jpg" alt="明信片：江南拱桥与棕榈树">
+                        <img src="images/postcards/postcard-2.jpg" alt="明信片：皮影人物逛古街">
+                        <img src="images/postcards/postcard-3.jpg" alt="明信片：皮影邂逅蒙古包">
                     </div>
-                    <h3>皮影戏人物挂饰</h3>
-                    <p>精美的皮影人物造型，可作为家居装饰或收藏品。</p>
-                    <div class="product-price">¥128</div>
-                    <a href="#" class="btn btn-outline">查看详情</a>
+                    <a href="#" class="btn-primary product-cta">查看购买渠道</a>
                 </div>
+
+                <!-- 产品2：海宁皮影贴纸 -->
                 <div class="product-card">
-                    <div class="product-image">
-                        <i class="fas fa-book"></i>
+                    <h3 class="product-title">海宁皮影贴纸</h3>
+                    <p class="product-desc">
+                        皮影贴纸，人物形态万千，趣味盎然  
+                        提取皮影戏经典角色造型，以Q版萌趣风格重构，适配手账、装饰等多元场景。
+                    </p>
+                    <!-- 新增价格模块 -->
+                    <p class="product-price">售价：<span>5元</span></p>
+                    <div class="product-image-grid">
+                        <img src="images/stickers/sticker-1.jpg" alt="皮影贴纸：经典角色集合">
+                        <img src="images/stickers/sticker-2.jpg" alt="皮影贴纸：萌趣造型设计">
                     </div>
-                    <h3>海宁皮影戏图册</h3>
-                    <p>收录经典皮影戏人物和场景的精美图册。</p>
-                    <div class="product-price">¥88</div>
-                    <a href="#" class="btn btn-outline">查看详情</a>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">
-                        <i class="fas fa-tshirt"></i>
-                    </div>
-                    <h3>皮影戏文化T恤</h3>
-                    <p>融合皮影戏元素的时尚文化衫。</p>
-                    <div class="product-price">¥158</div>
-                    <a href="#" class="btn btn-outline">查看详情</a>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">
-                        <i class="fas fa-gift"></i>
-                    </div>
-                    <h3>DIY皮影戏套装</h3>
-                    <p>包含制作材料和教程的DIY套装，体验皮影制作乐趣。</p>
-                    <div class="product-price">¥268</div>
-                    <a href="#" class="btn btn-outline">查看详情</a>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">
-                        <i class="fas fa-mug-hot"></i>
-                    </div>
-                    <h3>皮影戏主题茶杯</h3>
-                    <p>精美的陶瓷茶杯，印有皮影戏人物图案。</p>
-                    <div class="product-price">¥68</div>
-                    <a href="#" class="btn btn-outline">查看详情</a>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">
-                        <i class="fas fa-calendar-alt"></i>
-                    </div>
-                    <h3>皮影戏台历</h3>
-                    <p>2024年精美台历，每月展示不同的皮影戏人物。</p>
-                    <div class="product-price">¥45</div>
-                    <a href="#" class="btn btn-outline">查看详情</a>
+                    <a href="#" class="btn-primary product-cta">查看购买渠道</a>
                 </div>
             </div>
         </div>
